--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <!-- <link href="assets/vendor/aos/aos.css" rel="stylesheet"> -->
@@ -60,6 +62,21 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    // function CheckMetamaskInstalled() {
+    //   if (!window.ethereum) {
+    //     console.log("True");
+    //   }
+    //   else {
+    //     console.log("False");
+    //   }
+    // }
+
+    // window.addEventListener('DOMContentLoaded', (event) => {
+    //   CheckMetamaskInstalled();
+    // });
+  </script>
 </body>
 
 </html>
